# nonebot-plugin-color

./: .gitignore  README.md  pyproject.toml  setup.py
nonebot_plugin_color/: __init__.py  __main__.py  config.py  const.py  data_source.py
