[project]
name = "nonebot-plugin-color"
dynamic = ["version"]
description = "A specified color image generator for Nonebot2"
authors = [
    { name = "monsterxcn", email = "monsterxcn@gmail.com" },
    { name = "LgCookie", email = "lgc2333@126.com" },
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "nonebot2>=2.4.1",
    "nonebot-plugin-alconna>=0.54.2",
    "pil-utils>=0.2.2",
]
readme = "README.md"
keywords = ["nonebot", "nonebot2", "color"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/monsterxcn/nonebot-plugin-color"
documentation = "https://github.com/monsterxcn/nonebot-plugin-color#readme"
"Bug Tracker" = "https://github.com/monsterxcn/nonebot-plugin-color/issues"

[project.optional-dependencies]
pyd2 = ["pydantic-extra-types>=2.10.2"]
all = ["nonebot-plugin-color[pyd2]"]

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_color/__init__.py"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
